@@ -1,6 +1,8 @@
 [current]
+* run: --workers N overrides number of workers set in the config file
 * cmd_play_game: script has a new json return format + allows for returning multiple games; old format is still allowed 
 * .games file: format changed to json (allows for custom data)
+* bot remove: removes bot with all games & recalculates whole ranking (might take a while to execute)
 * bot update: -n/--new_name renames bot (this is only partially supported as this doesn't change the bot executable file; warning: potentially very slow as this has to update whole .games file)
 [0.2.0]
 * add support for getting error data (requires update of play_game script!)
